<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
    tools:context="com.example.android.musicapp.Playlist">

    <SearchView
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:iconifiedByDefault="false"
        android:queryHint="@string/playlist"
        android:fontFamily="sans-serif-condensed"/>

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gm"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@color/singer_name_color"
        android:textStyle="bold"
        android:layout_below="@+id/search"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="64dp" />
    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mj"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@color/singer_name_color"
        android:textStyle="bold"
        android:layout_below="@+id/text1"
        android:layout_alignLeft="@+id/text1"
        android:layout_alignStart="@+id/text1"
        android:layout_marginTop="35dp" />
    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ei"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@color/singer_name_color"
        android:textStyle="bold"
        android:layout_below="@+id/text2"
        android:layout_alignLeft="@+id/text2"
        android:layout_alignStart="@+id/text2"
        android:layout_marginTop="32dp" />
    <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bs"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@color/singer_name_color"
        android:textStyle="bold"
        android:layout_below="@+id/text2"
        android:layout_alignLeft="@+id/text2"
        android:layout_alignStart="@+id/text2"
        android:layout_marginTop="93dp" />
    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bsp"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@color/singer_name_color"
        android:textStyle="bold"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/text4"
        android:layout_alignLeft="@+id/text4"
        android:layout_alignStart="@+id/text4" />

    <Button
        android:id="@+id/shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sop"
        android:fontFamily="@string/font"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>