<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.musicapp.Shop">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yearly"
        android:fontFamily="@string/font"
        android:layout_marginTop="36dp"
        android:textSize="@dimen/year_month_size"
        android:layout_below="@+id/textView6"
        android:layout_alignRight="@+id/radioGroup2"
        android:layout_alignEnd="@+id/radioGroup2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monthly"
        android:fontFamily="@string/font"
        android:textSize="@dimen/year_month_size"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/textView4"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/year_month_size"
        android:text="@string/sub"
        android:fontFamily="@string/font"
        android:layout_marginLeft="18dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/radioGroup2"
        android:layout_alignStart="@+id/radioGroup2"
        android:layout_marginStart="18dp"
        android:layout_marginTop="15dp" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_payment_black_24dp"
        android:fontFamily="sans-serif-condensed"
        android:layout_marginRight="11dp"
        android:layout_marginEnd="11dp"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/textView5"
        android:layout_alignRight="@+id/textView6"
        android:layout_alignEnd="@+id/textView6" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="110dp"
        android:fontFamily="@string/font"
        android:layout_marginTop="200dp"
        android:textSize="@dimen/shop_radio_size"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/radioGroup2">
        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb1"
             />
        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb2" />
    </RadioGroup>

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sbt"
        android:layout_marginTop="62dp"
        android:fontFamily="@string/font"
        android:layout_below="@+id/radioGroup2"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/playingbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pla"
        android:fontFamily="@string/font"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
